# agentforge

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
agentforge/: __init__.py  cli.py
agentforge/agents/: __init__.py  agent_designer_agent.py  custom_tool_generator_agent.py  task_analyzer_agent.py  tool_designer_agent.py
agentforge/analytics/: __init__.py  cost_analyzer.py  optimization_engine.py  performance_tracker.py
agentforge/core/: __init__.py  adaptive_agent_manager.py  ai_tool_creator.py  code_generator.py  config.py  crew_designer.py  event_bus_patch.py  file_based_crew_designer.py  file_generator.py  intelligent_tool_creator.py  llm_provider.py  master_agent.py  master_agent_crew.py  master_agent_tools.py  rl_agent_creator.py  task_analyzer.py
agentforge/database/: __init__.py  database.py  models.py
agentforge/examples/: adaptive_agent_example.py
agentforge/knowledge_base/: knowledge_manager.py
agentforge/logging/: __init__.py  error_handler.py  logger.py
agentforge/templates/: __init__.py  crew_template_library.py  template_manager.py
agentforge/tools/: guardrails.py  registry.py
crews/simple_writer/: README.md  pyproject.toml  run.sh
crews/simple_writer/config/: agents.yaml  tasks.yaml
crews/simple_writer/src/simple_writer/: __init__.py  crew.py  main.py
crews/simple_writer/src/simple_writer/tools/: custom_tools.py
crews/tech_blog_writer_final/: README.md  pyproject.toml  run.sh
crews/tech_blog_writer_final/config/: agents.yaml  tasks.yaml
crews/tech_blog_writer_final/src/tech_blog_writer_final/: __init__.py  crew.py  main.py
crews/tech_blog_writer_final/src/tech_blog_writer_final/tools/: custom_tools.py
