[project]
name = "tech_blog_writer_final"
version = "1.0.0"
description = "AI-orchestrated crew for: Create a simple blog writer who can write informative blog posts about technology topics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai",
    "crewai-tools",
    "pydantic",
    "pyyaml"
]

[project.scripts]
tech_blog_writer_final = "src.tech_blog_writer_final.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
